exercises/wordpress-mysql/solution/mysql-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  template:
    metadata:
      labels:
        app: wordpress
        service: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
