exercises/wordpress-mysql/solution/wordpress-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-frontend
  labels:
    app: wordpress
spec:
  template:
    metadata:
      labels:
        app: wordpress
        service: frontend
    spec:
      containers:
        - image: wordpress:4.8
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
