exercises/wordpress-mysql/solution/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    service: mysql
  clusterIP: None
