exercises/wordpress-mysql/solution/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    app: wordpress
spec:
  rules:
  - host: wordpress.178.128.42.178.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-frontend
          servicePort: 80
